# AutoPack

./: .gitignore  .pre-commit-config.yaml  AutoPack.code-workspace  Instruction.txt  Makefile  README.md  pyproject.toml  pyrightconfig.json
docs/: architecture.md  pack-spec.md
scripts/: check_python_file_length.py
src/autopack/: __init__.py
src/autopack/cli/: __init__.py  commands.py  main.py
src/autopack/pack/: __init__.py  analysis.py  consolidation.py  pipeline.py  validator.py  writer.py
src/autopack/parsers/: __init__.py
src/autopack/parsers/bus/: __init__.py  adapter.py
src/autopack/parsers/dlt/: __init__.py  adapter.py  vendor_profiles.json
src/autopack/parsers/syslog/: __init__.py  adapter.py
src/autopack/parsers/testlogs/: __init__.py  adapter.py
src/autopack/schema/: __init__.py  models.py
src/autopack/utils/: __init__.py  io.py
tests/: conftest.py
tests/unit/: test_bus_parser.py  test_correlation_rules.py  test_dlt_consolidation.py  test_dlt_parser.py  test_pack_creation.py  test_pattern_collapse.py  test_syslog_testlog_parsers.py  test_timestamp_alignment.py
