[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopack"
version = "0.1.0"
description = "CLI-first deterministic automotive investigation pack builder"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AutoPack Contributors" }]
license = { text = "MIT" }
keywords = ["automotive", "investigation", "telemetry", "dlt", "can", "triage"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["python-can>=4.4.0", "cantools>=39.0.0"]

[project.urls]
Homepage = "https://github.com/autopack/autopack"
Documentation = "https://github.com/autopack/autopack/tree/main/docs"
Repository = "https://github.com/autopack/autopack"
Issues = "https://github.com/autopack/autopack/issues"

[project.optional-dependencies]
dlt = ["pydlt>=0.3.5"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
lint = ["ruff>=0.5.0"]
typecheck = ["mypy>=1.10.0"]
hooks = ["pre-commit>=3.7.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
autopack = "autopack.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autopack.parsers.dlt" = ["vendor_profiles.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --strict-config --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
